--- a/src/app/components/notes/notes.component.scss
+++ b/src/app/components/notes/notes.component.scss
@@ -1,9 +1,7 @@
 @import 'css/variables.scss';
-@import 'css/tabs-and-main-menu.scss';
 .notesContainer {
-    position: relative;
-    height: 100%;
     width: 100%;
+    height: 100%;
 }
 
 .notesContainer .mat-tab-body-wrapper {
