--- a/src/app/components/settings/settings.component.scss
+++ b/src/app/components/settings/settings.component.scss
@@ -1,6 +1,9 @@
-@import 'css/tabs-and-main-menu.scss';
-
+@import 'css/variables.scss';
+// Couldn't find a better way to force the main container to fill the screen
 .settingsContainer {
-    position: relative;
-    height: 100%;
+    position: absolute;
+    top: $titlebar-height;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
